p3/confs/api/api-deployment.yaml
# api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: wil42/playground:v1
          ports:
            - containerPort: 8888
              name: api-port
          resources:
            requests:
              memory: "150Mi"
              cpu: "200m"
            limits:
              memory: "300Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: dev
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: api-port
