p3/confs/api/api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: dev
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.localhost`)
      services:
        - name: api
          port: 80
      middlewares:
        - name: https-redirect
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: dev
spec:
  redirectScheme:
    scheme: https
    permanent: true
