p3/confs/api/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: dev
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.local`)
      services:
        - name: api
          port: 80
  tls:
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-redirect-to-https
  namespace: dev
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`api.local`)
      services:
        - name: api
          port: 80
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: dev
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
